# RegioSQM

./: README.md  README.org  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
docs/: org2md.sh
regiosqm/: batch_reqiosqm.py
replication/: README_replication.txt  comparison_with_SI.csv
replication/tools_used/: cap_indices_display.py  cover_cap_indices.py  cover_extract_compound_numbers.py  extract_compound_numbers.py  indices_display.py  round_pdf.py  svg_optimizer.py
src/regiosqm/: batch_reqiosqm.py  molecule_formats.py  molecule_svg.py  protonate.py  regiosqm.py  validate.py
